# python-backgroud-process

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: build-test.yml  deploy.yml
